--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,6 @@ project(test)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(test_run RPointTest.cpp ColorTest.cpp RVectorTest.cpp CanvasTest.cpp)
+add_executable(test_run Primaries/RPointTest.cpp Primaries/ColorTest.cpp Primaries/RVectorTest.cpp Graphics/CanvasTest.cpp Graphics/PPMTest.cpp)
 
 target_link_libraries(test_run gtest gtest_main)
