Finished splitting .h and .cpp files, added comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ file(GLOB_RECURSE SOURCES
         src/*.cpp
         )
 
-add_executable(Raytracer ${SOURCES})
+add_executable(Raytracer ${SOURCES} main.cpp)
 
 add_subdirectory(test)
